linked issue tracker in index + added .gitignore

--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
       Froscon HD - HP Touchpad Enyo App
     </div>
 
-    <p>Touchpad App for the Free and Open Source Software Conference (FrosCon) 2011</p><h2>Install</h2>
+<p>Touchpad App for the Free and Open Source Software Conference (FrosCon) 2011</p>
+<h2>Install</h2>
 <p>install from offical store</p>
 <h2>License</h2>
 <p>New BSD License</p>
 <h2>Authors</h2>
 <p>R. Kowalski<br/><br/>      </p>
 <h2>Contact</h2>
-<p>via Issue Tracker on github please<br/>      </p>
+<p>via <a href="https://github.com/robertkowalski/froscon-hd/issues">issue tracker on github</a> please<br/>      </p>
 
 
     <h2>Download</h2>
