--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <h2>Authors</h2>
 <p>R. Kowalski<br/><br/>      </p>
 <h2>Contact</h2>
-<p>via <a href="https://github.com/robertkowalski/froscon-hd/issues">issue tracker on github</a> please<br/>      </p>
+<p>via <a href="https://github.com/robertkowalski/froscon-hd/issues">issue tracker on github</a><br/>      </p>
 
 
     <h2>Download</h2>
