--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Froscon 2011 HD</title>
+    <title>FrOSCon 2011 HD</title>
     <script src="../1.0/framework/enyo.js" type="text/javascript" launch="debug"></script>
 <body>
 
