wording: FrosCon -> FrOSCon

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       <span class="small">by <a href="http://github.com/robertkowalski">robertkowalski</a></span></h1>
 
     <div class="description">
-      Froscon HD - HP Touchpad Enyo App
+      FrOSCon HD - HP Touchpad Enyo App
     </div>
 
-<p>Touchpad App for the Free and Open Source Software Conference (FrosCon) 2011</p>
+<p>Touchpad App for the Free and Open Source Software Conference (FrOSCon) 2011</p>
 <h2>Install</h2>
 <p>install from offical store</p>
 <h2>License</h2>
